Add montage measurement endpoint
