# swagger.json
@@ -1,9 +1,9 @@
 {
-    "swagger": "2.0",
+    "openapi": "3.0.0",
     "info": {
       "version": "1.0.0",
-      "title": "Factory Data Control Interface",
-      "description": "Tofaş Application API",
+      "description": "Factory Data Control Application Interface",
+      "title": "Tofaş API",
       "license": {
         "name": "MIT",
         "url": "https://opensource.org/licenses/MIT"
@@ -19,6 +19,10 @@
       {
         "name": "Departments",
         "description": "API for departments in the system"
+      },
+      {
+        "name": "Measurements",
+        "description": "API for measurements in the factory"
       }
     ],
     "schemes": [
@@ -165,6 +169,26 @@
               "schema": {
                 "$ref": "#/definitions/Department"
               }
+            }
+          }
+        }
+      },
+      "/measurements/montage/{carID}": {
+        "get": {
+          "tags": [
+            "Measurements"
+          ],
+          "parameters": [{ 
+            "name": "carID",
+            "in": "path",
+            "description": "ID of car",
+            "required": true,
+            "type": "string"
+          }],
+          "summary": "Get an montage measurements by car id",
+          "responses": {
+            "200": {
+              "description": "OK"
             }
           }
         }
